# udp-balancer

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  config-example.yml
.github/workflows/: rust.yml
src/: app.rs  config.rs  main.rs  metrics.rs  raw_socket.rs
src/balancer/: algorithm.rs  backend.rs  core.rs  maglev.rs  mirror.rs  mod.rs  rh.rs  session.rs  wrr.rs
src/listener/: batch.rs  mod.rs  standard.rs
src/server/: checker.rs  mod.rs  status.rs
