[package]
name = "udp-balancer"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Vasylenko"]
description = "High-performance UDP load balancer with flow-consistent hashing"
license = "MIT"
repository = "https://github.com/vitalvas/udp-balancer"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
axum = "0.7"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["net", "socket", "poll"] }
fnv = "1.0"
rand = "0.8"
parking_lot = "0.12"
dashmap = "6"
thiserror = "2"
humantime-serde = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
libc = "0.2"
once_cell = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
